--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ NEO4J_URI=neo4j://127.0.0.1:7687
 NEO4J_USER=neo4j
 NEO4J_PASSWORD=devpass123
 #JAVA_SOURCE_FOLDER=./tests/sample_java_project
-JAVA_SOURCE_FOLDER = "D:\\workspaces\\lang-parser-work\\car-center-devlab-main\\car-center-devlab-main\\src\\main\\java"
+JAVA_SOURCE_FOLDER = "D:\\workspaces\\lang-parser-work\\car-center-devlab-main\\src\\main\\java"
