--- a/env.example
+++ b/env.example
@@ -1,4 +1,7 @@
 NEO4J_URI=neo4j://127.0.0.1:7687
 NEO4J_USER=neo4j
-NEO4J_PASSWORD=devpass01
-JAVA_SOURCE_FOLDER=./tests/sample_java_project
+NEO4J_PASSWORD=devpass123
+#JAVA_SOURCE_FOLDER=./tests/sample_java_project
+JAVA_SOURCE_FOLDER = "D:\\workspaces\\lang-parser-work\\car-center-devlab"
+# LOG_LEVEL can be: DEBUG, INFO, WARNING, ERROR, CRITICAL
+LOG_LEVEL=INFO
