--- a/.env
+++ b/.env
@@ -3,5 +3,7 @@ NEO4J_USER=neo4j
 NEO4J_PASSWORD=devpass123
 #JAVA_SOURCE_FOLDER=./tests/sample_java_project
 JAVA_SOURCE_FOLDER = "D:\\workspaces\\lang-parser-work\\car-center-devlab"
+# DB_SCRIPT_FOLDER=./db_scripts
+DB_SCRIPT_FOLDER = "D:\\workspaces\\lang-parser-work\\car-center-devlab\\src\\main\\resources\\db\\prod"
 # LOG_LEVEL can be: DEBUG, INFO, WARNING, ERROR, CRITICAL
 LOG_LEVEL=INFO
