--- a/env.example
+++ b/env.example
@@ -7,3 +7,5 @@ JAVA_SOURCE_FOLDER = "D:\\workspaces\\lang-parser-work\\car-center-devlab"
 DB_SCRIPT_FOLDER = "D:\\workspaces\\lang-parser-work\\car-center-devlab\\src\\main\\resources\\db\\prod"
 # LOG_LEVEL can be: DEBUG, INFO, WARNING, ERROR, CRITICAL
 LOG_LEVEL=INFO
+# Sequence diagram output directory
+SEQUENCE_DIAGRAM_OUTPUT_DIR=./output/sequence-diagram
