--- a/.env
+++ b/.env
@@ -7,3 +7,9 @@ JAVA_SOURCE_FOLDER = "D:\\workspaces\\lang-parser-work\\car-center-devlab"
 DB_SCRIPT_FOLDER = "D:\\workspaces\\lang-parser-work\\car-center-devlab\\src\\main\\resources\\db\\prod"
 # LOG_LEVEL can be: DEBUG, INFO, WARNING, ERROR, CRITICAL
 LOG_LEVEL=INFO
+
+# Sequence diagram output directory
+SEQUENCE_DIAGRAM_OUTPUT_DIR=./output/sequence-diagram
+
+# CRUD Matrix output directory
+CRUD_MATRIX_OUTPUT_DIR=./output/crud-matrix
