log 관리 체계 수정(2025-10-10 00:34)

--- a/.gitignore
+++ b/.gitignore
@@ -216,3 +216,11 @@ plantuml.jar
 # External libraries
 libs/
 
+csa/cli/__pycache__/
+csa/services/__pycache__/
+csa/utils/__pycache__/
+csa/models/__pycache__/
+*.pyc
+
+logs/
+*.log
