--- a/env.example
+++ b/env.example
@@ -1,6 +1,9 @@
 NEO4J_URI=neo4j://127.0.0.1:7687
-NEO4J_USER=neo4j
-NEO4J_PASSWORD=devpass123
+NEO4J_INSTANCE=CSADB
+NEO4J_DATABASE=csadb01
+NEO4J_USER=csauser
+NEO4J_PASSWORD=csauser123
+NEO4J_POOL_SIZE=10
 #JAVA_SOURCE_FOLDER=./tests/sample_java_project
 JAVA_SOURCE_FOLDER = "D:\\workspaces\\lang-parser-work\\car-center-devlab"
 # DB_SCRIPT_FOLDER=./db_scripts
