--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 NEO4J_URI=neo4j://127.0.0.1:7687
-NEO4J_INSTANCE=CSADB
+#NEO4J_INSTANCE=CSADB
 NEO4J_DATABASE=csadb01
 NEO4J_USER=csauser
 NEO4J_PASSWORD=csauser123
