--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,6 +13,7 @@
       ]
     }
   },
-  "postCreateCommand": "pip install -r requirements.txt",
+  "postCreateCommand": "if [ ! -f ../.env ]; then cp ../.env.example ../.env; fi && pip install -r requirements.txt",
   "remoteUser": "vscode"
 }
+
