docker-compose 수정(2025-10-16 13:35)
Co-authored-by: Ona <no-reply@ona.com>

--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -23,6 +23,7 @@ services:
       PYTHONUNBUFFERED: "1"
       PLANTUML_JAR_PATH: /workspace/lang-java-springboot/libs/plantuml.jar
       MMDC_PATH: /usr/local/bin/mmdc
+      JAVA_HOME: /usr/lib/jvm/java-21-openjdk-amd64
 
     # Dev Container attach만 유지(앱 실행은 터미널에서)
     command: bash -lc "sleep infinity"
