--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     network_mode: host
 
     # VS Code가 attach 하는 컨테이너의 작업 폴더
-    working_dir: /workspace/lang-java-springboot
+    working_dir: /workspace
 
     volumes:
       - ..:/workspace:cached
@@ -21,7 +21,7 @@ services:
       NEO4J_USERNAME: csauser
       NEO4J_PASSWORD: ${CSAUSER_PASSWORD:-csauser123}
       PYTHONUNBUFFERED: "1"
-      PLANTUML_JAR_PATH: /workspace/lang-java-springboot/libs/plantuml.jar
+      PLANTUML_JAR_PATH: /workspace/libs/plantuml.jar
       MMDC_PATH: /usr/local/bin/mmdc
       JAVA_HOME: /usr/lib/jvm/java-21-openjdk-amd64
 
