neo4j extension 추가(2025-10-17 00:5)
Co-authored-by: Ona <no-reply@ona.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,9 @@
     "python.defaultInterpreterPath": "/usr/local/bin/python",
     "[python]": {
         "editor.defaultFormatter": "ms-python.autopep8"
+    },
+    "neo4j.connection": {
+        "uri": "bolt://localhost:7687",
+        "username": "neo4j"
     }
 }
