Neo4j healthcheck 방식 변경: cypher-shell -> HTTP(2025-10-17 00:41)
- cypher-shell 기반 healthcheck가 실패하는 문제 해결

- HTTP 기반 healthcheck로 변경 (wget)

- start_period 추가로 초기 시작 시간 확보

Co-authored-by: Ona <no-reply@ona.com>

--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -52,10 +52,11 @@ services:
       - ../neo4j/plugins:/plugins
 
     healthcheck:
-      test: ["CMD", "cypher-shell", "-u", "neo4j", "-p", "neo4j-temp", "RETURN 1;"]
-      interval: 5s
-      timeout: 3s
+      test: ["CMD-SHELL", "wget --no-verbose --tries=1 --spider http://localhost:7474 || exit 1"]
+      interval: 10s
+      timeout: 10s
       retries: 30
+      start_period: 40s
 
   neo4j-init:
     image: neo4j:5
