--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -50,6 +50,7 @@ services:
       - ../neo4j/data:/data
       - ../neo4j/import:/import
       - ../neo4j/plugins:/plugins
+      - ../neo4j/conf:/var/lib/neo4j/conf
 
     healthcheck:
       test: ["CMD-SHELL", "wget --no-verbose --tries=1 --spider http://localhost:7474 || exit 1"]
