Add memory and directory settings to neo4j.conf
Co-authored-by: Ona <no-reply@ona.com>

--- a/neo4j/conf/neo4j.conf
+++ b/neo4j/conf/neo4j.conf
@@ -17,4 +17,12 @@ server.memory.heap.initial_size=512m
 server.memory.heap.max_size=1g
 
 # Security Settings (환경변수로 오버라이드됨)
+
+server.memory.pagecache.size=512M
+server.directories.plugins=/plugins
+server.directories.logs=/logs
+server.directories.import=/import
 dbms.security.procedures.unrestricted=apoc.*
+dbms.memory.heap.max_size=1g
+dbms.memory.heap.initial_size=512m
+dbms.default_database=csadb01
