Dev Container 자동 설정 추가(2025-10-17 13:49)
- Python 가상환경 자동 생성 (/workspace/.venv)

- Python 패키지 자동 설치 (requirements.txt)

- Claude Code CLI 자동 설치

- Codex CLI 자동 설치

- 가상환경 자동 활성화 (.bashrc 설정)

- postCreateCommand에서 모든 설정 자동화

Co-authored-by: Ona <no-reply@ona.com>

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -61,4 +61,10 @@ ENV PATH="${JAVA_HOME}/bin:${PATH}"
 ENV PLANTUML_JAR_PATH=/workspace/libs/plantuml.jar
 ENV MMDC_PATH=/usr/local/bin/mmdc
 
+# Python 가상환경 자동 활성화 설정
+RUN echo 'if [ -f /workspace/.venv/bin/activate ]; then' >> /home/vscode/.bashrc \
+ && echo '    source /workspace/.venv/bin/activate' >> /home/vscode/.bashrc \
+ && echo '    echo "[venv] Python virtual environment activated"' >> /home/vscode/.bashrc \
+ && echo 'fi' >> /home/vscode/.bashrc
+
 WORKDIR /workspace
