--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,8 +7,8 @@
   // 컨테이너 시작 전(호스트에서 실행): env.gitpod → .env 자동 복사
   "initializeCommand": "bash -lc 'cd ..; if [ ! -f .env ] && [ -f env.gitpod ]; then cp env.gitpod .env; echo \"[init] Copied env.gitpod -> .env\"; fi'",
 
-  // 컨테이너 안에서: PlantUML JAR 복사 + Python deps 설치
-  "postCreateCommand": "/usr/local/bin/ensure-plantuml-into-workspace && if [ -f requirements.txt ]; then pip install -r requirements.txt; fi",
+  // 컨테이너 안에서: 개발 환경 설정
+  "postCreateCommand": "bash -c 'set -e && echo \"[setup] Starting dev environment setup...\" && /usr/local/bin/ensure-plantuml-into-workspace && echo \"[setup] Creating Python virtual environment...\" && python -m venv /workspace/.venv && echo \"[setup] Installing Python packages...\" && /workspace/.venv/bin/pip install --upgrade pip && /workspace/.venv/bin/pip install -r /workspace/requirements.txt && echo \"[setup] Installing Claude Code CLI...\" && sudo npm install -g @anthropic-ai/claude-code && echo \"[setup] Installing Codex CLI...\" && sudo npm install -g @openai/codex && echo \"[setup] Dev environment setup complete!\"'",
 
   "forwardPorts": [13000, 7474, 7687],
   "customizations": {
