--- a/neo4j/conf/neo4j.conf
+++ b/neo4j/conf/neo4j.conf
@@ -4,10 +4,10 @@
 
 # Network Settings
 server.default_listen_address=0.0.0.0
-server.bolt.enabled=true
-server.bolt.listen_address=0.0.0.0:7687
-#dbms.connector.bolt.enabled=true
-#dbms.connector.bolt.listen_address=0.0.0.0:7687
+#server.bolt.enabled=true
+#server.bolt.listen_address=0.0.0.0:7687
+dbms.connector.bolt.enabled=true
+dbms.connector.bolt.listen_address=0.0.0.0:7687
 server.bolt.tls_level=REQUIRED
 
 server.http.enabled=true
