neo4j config 수정
Co-authored-by: Ona <no-reply@ona.com>

--- a/neo4j/conf/neo4j.conf
+++ b/neo4j/conf/neo4j.conf
@@ -8,7 +8,7 @@ server.default_listen_address=0.0.0.0
 #server.bolt.listen_address=0.0.0.0:7687
 dbms.connector.bolt.enabled=true
 dbms.connector.bolt.listen_address=0.0.0.0:7687
-server.bolt.tls_level=REQUIRED
+#server.bolt.tls_level=REQUIRED
 
 server.http.enabled=true
 server.http.listen_address=0.0.0.0:7474
