--- a/env.example
+++ b/env.example
@@ -1,14 +1,14 @@
-NEO4J_URI=neo4j://127.0.0.1:7687
+NEO4J_URI=bolt://127.0.0.1:7687
 NEO4J_INSTANCE=CSADB
 NEO4J_DATABASE=csadb01
 NEO4J_USER=csauser
 NEO4J_PASSWORD=csauser123
 NEO4J_POOL_SIZE=10
 
-#JAVA_SOURCE_FOLDER=./tests/sample_java_project
 JAVA_SOURCE_FOLDER = target_src/car-center-devlab
-# DB_SCRIPT_FOLDER=./db_scripts
 DB_SCRIPT_FOLDER = target_src/car-center-devlab/src/main/resources/db/prod
+USE_NEO4J_BEAN_RESOLVER=true
+
 # LOG_LEVEL can be: DEBUG, INFO, WARNING, ERROR, CRITICAL
 LOG_LEVEL=INFO
 
