java object 분석 병렬처리 반영(2025-10-18 19:42)
Co-authored-by: Ona <no-reply@ona.com>

--- a/env.example
+++ b/env.example
@@ -4,10 +4,17 @@ NEO4J_DATABASE=csadb01
 NEO4J_USER=csauser
 NEO4J_PASSWORD=csauser123
 NEO4J_POOL_SIZE=10
+NEO4J_BATCH_SIZE=100
 
 JAVA_SOURCE_FOLDER = target_src/car-center-devlab
 DB_SCRIPT_FOLDER = target_src/car-center-devlab/src/main/resources/db/prod
 USE_NEO4J_BEAN_RESOLVER=true
+# 스트리밍 파싱 모드 활성화 (병렬처리 + 메모리 효율)
+USE_STREAMING_PARSE=true
+
+# Java 파싱 병렬 워커 수 (기본값: 8)
+# CPU 코어 수에 맞게 조정 (권장: 4-16)
+JAVA_PARSE_WORKERS=8
 
 # LOG_LEVEL can be: DEBUG, INFO, WARNING, ERROR, CRITICAL
 LOG_LEVEL=INFO
