시퀀스다이어그램생성로직개선V0.95(2025-10-20 00:05)   - 추후개선: Title 문자열을 크고 굵은 글씨체로 표시

--- a/env.desktop
+++ b/env.desktop
@@ -1,8 +1,9 @@
+#Data Base 접속 정보
 NEO4J_URI=bolt://127.0.0.1:7687
 NEO4J_INSTANCE=CSADB
 NEO4J_DATABASE=csadb01
 NEO4J_USER=csaadm
-NEO4J_PASSWORD=csaadm123
+NEO4J_PASSWORD=csadm의 password
 NEO4J_BATCH_SIZE=100
 
 JAVA_SOURCE_FOLDER = target_src/car-center-devlab
