영향도분석기능추가 구현 V0.8(2025-10-21 23:10)

--- a/env.example
+++ b/env.example
@@ -24,3 +24,4 @@ LOG_LEVEL=INFO
 SEQUENCE_DIAGRAM_OUTPUT_DIR=output/sequence-diagram
 CRUD_MATRIX_OUTPUT_DIR=output/crud-matrix
 CLASS_SPEC_OUTPUT_DIR=output/class-spec
+IMPACT_ANALYSIS_OUTPUT_DIR=output/impact-analysis
