AI 분석 결과 추가 (2025-10-25 13:20)

--- a/env.example
+++ b/env.example
@@ -26,6 +26,8 @@ CRUD_MATRIX_OUTPUT_DIR=output/crud-matrix
 CLASS_SPEC_OUTPUT_DIR=output/class-spec
 IMPACT_ANALYSIS_OUTPUT_DIR=output/impact-analysis
 
+# AI를 적용해서 Class, Method, SQL document 문장 생성(default = false)
+AI_USE_ANALYSIS=false
 
 # AI Provider 설정 (google, groq, lmstudio, openai 중 선택)
 AI_PROVIDER=google
