AI 분석 방식 및 DB 저장 방식 개선(2025-10-25 21:45)

--- a/env.example
+++ b/env.example
@@ -29,6 +29,11 @@ IMPACT_ANALYSIS_OUTPUT_DIR=output/impact-analysis
 # AI를 적용해서 Class, Method, SQL document 문장 생성(default = false)
 AI_USE_ANALYSIS=false
 
+# AI Enrichment 배치 크기 (기본값: 50)
+# ai-enrich 명령어에서 한 번에 처리할 노드 수
+# Rate Limit 발생 시 이 값을 줄여서 재시도
+AI_ENRICHMENT_BATCH_SIZE=50
+
 # AI Provider 설정 (google, groq, lmstudio, openai 중 선택)
 AI_PROVIDER=google
 
