AI 분석 방식  성능 개선(2025-10-25 23:50)

--- a/env.example
+++ b/env.example
@@ -29,9 +29,15 @@ IMPACT_ANALYSIS_OUTPUT_DIR=output/impact-analysis
 # AI를 적용해서 Class, Method, SQL document 문장 생성(default = false)
 AI_USE_ANALYSIS=false
 
-# AI Enrichment 배치 크기 (기본값: 50)
-# ai-enrich 명령어에서 한 번에 처리할 노드 수
+# AI Enrichment 동시 요청 수 (기본값: 10)
+# ai-enrich 명령어에서 동시에 처리할 노드 수
+# 로컬 LLM (LM Studio): 10-20 권장
+# 클라우드 API (Google, OpenAI): 5-10 권장
 # Rate Limit 발생 시 이 값을 줄여서 재시도
+CONCURRENT_AI_REQUESTS=10
+
+# AI Enrichment 배치 크기 (deprecated: 하위 호환성을 위해 유지)
+# 대신 CONCURRENT_AI_REQUESTS 사용을 권장합니다
 AI_ENRICHMENT_BATCH_SIZE=50
 
 # AI Provider 설정 (google, groq, lmstudio, openai 중 선택)
